--- a/main/authentication/templates/user_list.html
+++ b/main/authentication/templates/user_list.html
@@ -4,16 +4,18 @@
     Users
 {% endblock %}
 
+{% block center_content %}
+{% endblock %}
+
 {% block content %}
 
 {% include 'user_url.html'%}
 
-<div class="container w-11/12 mx-auto">
+<div class="container mx-auto">
     <div class="flex justify-between items-center py-2">
  
         <form method="GET" class="w-full">
             <div class="flex items-center">
-                <!-- Office Dropdown -->
                 <div class="relative inline-block">
                     <button id="dropdown-button" class="transition duration-200 inline-flex items-center py-2.5 px-4 text-sm font-medium text-beige bg-navyBlue rounded-s-lg border-2 border-navyBlue hover:bg-beige hover:text-navyBlue" type="button">
                         Office
@@ -35,7 +37,6 @@
                     </div>
                 </div>
 
-                <!-- Search Input -->
                 <div class="relative w-full">
                     <input type="search" name="search" value="{{ search_term }}" class="block p-2.5 w-full z-20 text-sm text-navyBlue bg-beige rounded-e-lg border-2 border-navyBlue border-s-2 border border-navyBlue focus:ring-navyBlue focus:border-navyBlue" placeholder="Search ..." />
                     <button type="submit" class="absolute top-0 end-0 p-2.5 text-sm font-medium h-full text-beige bg-navyBlue rounded-e-lg border border-navyBlue hover:bg-navyBlue focus:ring-4 focus:outline-none focus:ring-navyBlue">
@@ -49,7 +50,6 @@
         </form>
 
         <div class="w-1/4 flex justify-end ">
-          
             <a href="{% url 'create_user' %}" class="border-navyBlue border-2 p-2 rounded-full bg-beige text-navyBlue hover:bg-navyBlue hover:text-beige transition duration-200">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z" />
@@ -78,19 +78,42 @@
                         No Office Assigned
                     {% endif %}
                 </td>
-                <td class="py-2 text-center">
-                    <a href="{% url 'edit_user' user.id %}" class="even:bg-beige even:text-navyBlue inline-flex items-center justify-center">
+                <td class="py-2 text-center flex justify-center gap-x-2">
+                    
+                    <a href="{% url 'edit_user' user.id %}" class="even:bg-beige even:text-navyBlue inline-flex border-2 border-navyBlue flex p-2 rounded-lg bg-navyBlue text-beige hover:text-navyBlue hover:bg-beige transition duration-200">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
                         </svg>
                     </a>
+
+                    <button type="button" onclick="openDeleteModal('{{ user.id }}')" class="border-2 border-red-600 flex p-2 rounded-full bg-red-600 text-beige hover:text-red-600 hover:bg-beige transition duration-200">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                        </svg>
+                    </button>
+ 
                 </td>
             </tr>
+
+            <div id="deleteModal-{{ user.id }}" class="fixed inset-0 flex items-center justify-center hidden bg-black bg-opacity-50 z-50 transition-opacity duration-300 ease-out opacity-0">
+                <div class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"></div>
+                <div class="bg-beige p-6 rounded-lg shadow-lg transform transition-transform duration-300 ease-out scale-95">
+                    <h3 class="text-lg font-bold text-navyBlue mb-4">Confirm Delete User: {{ user.username }}</h3>
+                    <p>Are you sure you want to delete this user?</p>
+                    <div class="mt-4 flex justify-end gap-2">
+                        <button type="button" onclick="closeDeleteModal('{{ user.id }}')" class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400 transition duration-200">Cancel</button>
+                        <form action="{% url 'delete_user' user.id %}" method="POST">
+                            {% csrf_token %}
+                            <button type="submit" class="px-4 py-2 bg-red-600 text-beige rounded hover:bg-red-700 transition duration-200">Delete</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
             {% endfor %}
         </tbody>
     </table>
 
-    <!-- Pagination Controls -->
     <div class="flex justify-between items-center mt-4">
         <div class="flex space-x-2">
             {% if page_obj.has_previous %}
@@ -106,7 +129,6 @@
     </div>
 </div>
 
-<!-- JavaScript for dropdown -->
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const dropdownButton = document.getElementById('dropdown-button');
@@ -116,6 +138,36 @@
             dropdownMenu.classList.toggle('hidden');
         });
     });
+
+    function openModal(modalId) {
+        var modal = document.getElementById(modalId);
+        modal.classList.remove('hidden');
+        setTimeout(function() {
+            modal.classList.remove('opacity-0');
+            modal.classList.add('opacity-100');
+            modal.querySelector('.transform').classList.remove('scale-95');
+            modal.querySelector('.transform').classList.add('scale-100');
+        }, 10);
+    }
+
+    function closeModal(modalId) {
+        var modal = document.getElementById(modalId);
+        modal.classList.remove('opacity-100');
+        modal.classList.add('opacity-0');
+        modal.querySelector('.transform').classList.add('scale-95');
+        modal.querySelector('.transform').classList.remove('scale-100');
+        setTimeout(function() {
+            modal.classList.add('hidden');
+        }, 300);
+    }
+    
+    function openDeleteModal(userId) {
+        openModal('deleteModal-' + userId);
+    }
+
+    function closeDeleteModal(userId) {
+        closeModal('deleteModal-' + userId);
+    }
 </script>
 
 {% endblock %}
