--- a/main/office/templates/office_create.html
+++ b/main/office/templates/office_create.html
@@ -1,10 +1,11 @@
 <!--office_create.html-->
 {% extends 'layout.html' %}
-
+{% block center_content %}
+{% endblock %}
 {% block content %}
 {% include 'office_url.html'%}
 
-<div class="shadow-lg shadow-navyBlue container mx-auto bg-beige bg-opacity-60 w-11/12 rounded-lg my-5 flex">
+<div class="shadow-lg shadow-navyBlue container mx-auto bg-beige bg-opacity-60 rounded-lg my-5 flex">
     <div class="flex w-full">
         <div class="flex p-3 rounded-l-lg bg-navyBlue"></div>
 
