--- a/main/survey/templates/survey_success.html
+++ b/main/survey/templates/survey_success.html
@@ -1,18 +1,30 @@
-<!-- survey_success.html -->
 {% extends 'layout.html' %}
 
 {% block content %}
-<div class="my-10">
-    <h1 class="text-medium text-navyBlue text-center text-2xl">Republic of the Philippines</h1>
-    <h1 class="text-bold text-navyBlue text-center text-2xl">DEPARTMENT OF LABOR AND EMPLOYMENT</h1>
+{% load static %}
+
+
+<div>
+    <div class="items-center bg-beige px-20 py-5 w-full rounded-lg border-2 border-navyBlue">
+
+        <div class="flex gap-x-5 my-4 p-4">
+            <img src="{% static 'logo.png' %}" class="w-20 h-20" alt="Logo PNG">
+            <div>
+                <h1 class="font-bold text-navyBlue text-2xl">Republic of the Philippines</h1>
+                <h1 class="font-bold text-navyBlue text-2xl">DEPARTMENT OF LABOR AND EMPLOYMENT</h1>
+
+            </div>
+        </div>
+        <h1 class="text-bold text-navyBlue text-center text-3xl bg-navyLightestBlue rounded-lg p-3">THANK YOU FOR YOUR RESPONSE!</h1>
+
+        <div class="flex justify-center mt-4">
+            <a href="{% url 'survey_index' %}" class="border-navyBlue border-2 px-4 py-2 rounded-full bg-beige text-navyBlue hover:bg-navyBlue hover:text-beige transition duration-200">
+                Respond Again
+            </a>
+            </a>
+        </div>
+    </div>
+
 </div>
 
-<div class="items-center mx-72">
-    <h1 class="text-bold text-navyBlue text-center text-xl">THANK YOU FOR YOUR RESPONSE!</h1>
-    <div class="flex justify-center my-4">
-        <a href="{% url 'survey_index' %}" class="bg-navyBlue text-white py-2 px-6 rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">
-            Back to Survey
-        </a>
-    </div>
-</div>
 {% endblock %}
