--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -5,10 +5,10 @@
 {% endblock %}
 
 {% block content %}
-    <div class="shadow-lg shadow-navyBlue container mx-auto bg-beige w-11/12 rounded-lg my-5 p-5 lg:flex ">
 
-
-        <div class="lg:w-1/4 sm:w-full p-5 flex items-center justify-center mx-auto   ">
+<div class="flex-grow flex items-center justify-center">
+    <div class="shadow-lg shadow-navyBlue bg-beige rounded-lg p-5 mx-auto ">
+        <div class="p-5 flex items-center justify-center">
             <div>
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="text-navyBlue size-1/2 mx-auto">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 3v11.25A2.25 2.25 0 0 0 6 16.5h2.25M3.75 3h-1.5m1.5 0h16.5m0 0h1.5m-1.5 0v11.25A2.25 2.25 0 0 1 18 16.5h-2.25m-7.5 0h7.5m-7.5 0-1 3m8.5-3 1 3m0 0 .5 1.5m-.5-1.5h-9.5m0 0-.5 1.5m.75-9 3-3 2.148 2.148A12.061 12.061 0 0 1 16.5 7.605" />
@@ -21,58 +21,9 @@
                         Go to Survey
                     </a>
                 </div>
-                
-   
             </div>
         </div>
-        
-        <div class="rounded-lg m-2 md:m-3 lg:w-1/2 lg:opacity-100 lg:m-5">
-            
-            <img class="h-auto max-w-full rounded-lg border-2 border-navyBlue" src="https://picsum.photos/1000/600" alt="image description">
-
-        </div>
-
-
-
-        <div class="rounded-lg flex flex-col lg:w-1/4 my-5">
-            <div class="rounded-lg w-full flex-1 flex items-center justify-center">
-                <img class="h-auto max-w-full rounded-lg border-2 border-navyBlue" src="https://picsum.photos/1000/600" alt="image description">
-            </div>
-        
-            <div class="rounded-lg w-full flex-1 flex items-center justify-center">
-                <img class="h-auto max-w-full rounded-lg border-2 border-navyBlue" src="https://picsum.photos/1000/600" alt="image description">
-            </div>
-        </div>
-        
-
-
     </div>
-
-    <div class="shadow-lg shadow-navyBlue container mx-auto bg-beige w-11/12 rounded-lg p-5 lg:flex mb-5 ">
-
-
-        <div class="rounded-lg m-2 md:m-3 lg:w-1/3 lg:opacity-100 lg:m-5">
-            
-            <img class="h-auto max-w-full rounded-lg border-2 border-navyBlue" src="https://picsum.photos/1000/600" alt="image description">
-
-        </div>
-
-        <div class="rounded-lg m-2 md:m-3 lg:w-1/3 lg:opacity-100 lg:m-5">
-            
-            <img class="h-auto max-w-full rounded-l border-2 border-navyBlue" src="https://picsum.photos/1000/600" alt="image description">
-
-        </div>
-
-        <div class="rounded-lg m-2 md:m-3 lg:w-1/3 lg:opacity-100 lg:m-5">
-            
-            <img class="h-auto max-w-full rounded-lg border-2 border-navyBlue" src="https://picsum.photos/1000/600" alt="image description">
-
-        </div>
-
-
+</div>
  
-        
-
-
-    </div>
 {% endblock %}
