--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -1,27 +1,38 @@
-<nav class="bg-navyBlue mx-auto">
+{% load static %}
+
+<nav class="bg-navyBlue">
   <div class="container w-11/12 flex items-center justify-between mx-auto p-2">
-    <!-- Logo and icons -->
     <div class="flex items-center space-x-3">
-      <img src="https://dolexportal.com/img/agencies/client-16.png" class="h-14" alt=" ">
-      <span class="self-center text-2xl font-semibold whitespace-nowrap text-beige">DOLE</span>
+      <img src="{% static 'full_logo.png' %}" class="h-14" alt="Logo PNG">
+      <div class="flex flex-col"> 
+        <span class="self-center text-2xl font-semibold whitespace-nowrap text-beige">DOLE</span>
+        {% if user.is_authenticated and user.is_superuser %}
+        <span class="self-left  text-sm font-semibold whitespace-nowrap text-beige">Super User</span>
+        {% endif %}
+        {% if user.is_authenticated and user.profile.role == 'admin' %}
+        <span class="self-left  text-sm font-semibold whitespace-nowrap text-beige">Admin</span>
+        {% endif %}
+        {% if user.is_authenticated and user.profile.role == 'hr' %}
+        <span class="self-left  text-sm font-semibold whitespace-nowrap text-beige">HR</span>
+        {% endif %}
+        {% if user.is_authenticated and user.profile.role == 'employee'  %}
+        <span class="self-left  text-sm font-semibold whitespace-nowrap text-beige">Employee</span>
+        {% endif %}
+      </div>
+      
       <div class="text-beige">
-        <!-- Icons for different screens -->
-        <!-- Phone Icon - Hidden on large screens -->
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 lg:hidden md:hidden">
           <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3" />
         </svg>
-        <!-- Tablet Icon -->
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 hidden md:block lg:hidden">
           <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5h3m-6.75 2.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-15a2.25 2.25 0 0 0-2.25-2.25H6.75A2.25 2.25 0 0 0 4.5 4.5v15a2.25 2.25 0 0 0 2.25 2.25Z" />
         </svg>
-        <!-- Desktop Icon -->
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 hidden lg:block">
           <path stroke-linecap="round" stroke-linejoin="round" d="M9 17.25v1.007a3 3 0 0 1-.879 2.122L7.5 21h9l-.621-.621A3 3 0 0 1 15 18.257V17.25m6-12V15a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 15V5.25m18 0A2.25 2.25 0 0 0 18.75 3H5.25A2.25 2.25 0 0 0 3 5.25m18 0V12a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 12V5.25" />
         </svg>
       </div>
     </div>
 
-    <!-- Dropdown for small and medium screens -->
     <div class="relative lg:hidden">
       <button id="dropdownButton" class="text-beige flex items-center">
         Menu
@@ -30,7 +41,6 @@
         </svg>
       </button>
 
-      <!-- Dropdown menu -->
       <div id="dropdownMenu" class="hidden absolute right-0 mt-2 w-48 bg-navyBlue border border-beige text-beige rounded-md shadow-lg">
         <a href="{% url 'index' %}" class="block px-4 py-2 text-beige hover:bg-beige hover:text-navyBlue">Home</a>
         <a href="{% url 'survey_index' %}" class="block px-4 py-2 text-beige hover:bg-beige hover:text-navyBlue">Survey</a>
@@ -48,10 +58,8 @@
       </div>
     </div>
 
-    <!-- Navbar items for large screens -->
     <div class="items-center justify-end w-full flex w-auto order-1 hidden lg:flex" id="navbar-sticky">
       <ul class="flex font-bold bg-navyLightBlue rounded-full bg-gradient-to-r from-navyLightBlue to-navyLighterBlue border-beige border-2">
-        <!-- Your existing menu items here for large screens -->
         <li>
           <a href="{% url 'index' %}">
             <div class="transition duration-200 flex p-2 rounded-l-full text-beige hover:bg-beige hover:text-navyBlue
@@ -62,162 +70,146 @@
               Home
             </div>
           </a>
-      </li>
-      <li>
-        <a href="{% url 'survey_index' %}">
-          <div class="transition duration-200 flex p-2 text-beige hover:bg-beige hover:text-navyBlue
-          {% if '/survey' in request.path %} text-navyBlue bg-beige aria-current="page" {% endif %}">
+        </li>
+        <li>
+          <a href="{% url 'survey_index' %}">
+            <div class="transition duration-200 flex p-2 text-beige hover:bg-beige hover:text-navyBlue
+            {% if '/survey' in request.path %} text-navyBlue bg-beige aria-current="page" {% endif %}">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 3v11.25A2.25 2.25 0 0 0 6 16.5h2.25M3.75 3h-1.5m1.5 0h16.5m0 0h1.5m-1.5 0v11.25A2.25 2.25 0 0 1 18 16.5h-2.25m-7.5 0h7.5m-7.5 0-1 3m8.5-3 1 3m0 0 .5 1.5m-.5-1.5h-9.5m0 0-.5 1.5M9 11.25v1.5M12 9v3.75m3-6v6" />
+              </svg>
+              Survey
+            </div>
+          </a>
+        </li>
+        {% if user.is_authenticated %}
+        <li>
+          <a href="{% url 'survey_list' %}">
+            <div class="transition duration-200 flex p-2 text-beige hover:bg-beige hover:text-navyBlue
+            {% if '/stats' in request.path %} text-navyBlue bg-beige aria-current="page" {% endif %}">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 3v11.25A2.25 2.25 0 0 0 6 16.5h2.25M3.75 3h-1.5m1.5 0h16.5m0 0h1.5m-1.5 0v11.25A2.25 2.25 0 0 1 18 16.5h-2.25m-7.5 0h7.5m-7.5 0-1 3m8.5-3 1 3m0 0 .5 1.5m-.5-1.5h-9.5m0 0-.5 1.5M9 11.25v1.5M12 9v3.75m3-6v6" />
+              <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 1 0 7.5 7.5h-7.5V6Z" />
+              <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0 0 13.5 3v7.5Z" />
             </svg>
-            Survey
-          </div>
-        </a>
-      </li>
-      {% if user.is_authenticated %}
-      <li>
-        <a href="{% url 'survey_list' %}">
-          <div class="transition duration-200 flex p-2 text-beige hover:bg-beige hover:text-navyBlue
-          {% if '/stats' in request.path %} text-navyBlue bg-beige aria-current="page" {% endif %}">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 1 0 7.5 7.5h-7.5V6Z" />
-            <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0 0 13.5 3v7.5Z" />
-          </svg>
-            Stats
-          </div>
-        </a>
-      </li>
-      {% endif %}
-      {% if user.is_authenticated and user.is_superuser %}
-      <li>
-        <a href="{% url 'office_list' %}">
-          <div class="transition duration-200 flex p-2 text-beige hover:bg-beige hover:text-navyBlue
-          {% if '/offices' in request.path %} text-navyBlue bg-beige aria-current="page" {% endif %}">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 21h16.5M4.5 3h15M5.25 3v18m13.5-18v18M9 6.75h1.5m-1.5 3h1.5m-1.5 3h1.5m3-6H15m-1.5 3H15m-1.5 3H15M9 21v-3.375c0-.621.504-1.125 1.125-1.125h3.75c.621 0 1.125.504 1.125 1.125V21" />
-          </svg>
-          
-            Offices
-          </div>
-        </a>
-      </li>
-      {% endif %}
-      {% if user.is_authenticated and user.is_superuser %}
-      <li>
-        <a href="{% url 'user_list' %}">
-          <div class="transition duration-200 flex p-2 text-beige hover:bg-beige hover:text-navyBlue
-          {% if '/auth' in request.path %} text-navyBlue bg-beige aria-current="page" {% endif %}">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-          </svg>
-            Users
-          </div>
-        </a>
-      </li>
-      {% endif %}
-      {% if user.is_authenticated %}
-      <li>
-        <a href="#" id="logoutButton">
-          <div class="transition duration-200 flex p-2 rounded-r-full text-beige hover:bg-beige hover:text-navyBlue">
+              Stats
+            </div>
+          </a>
+        </li>
+        {% endif %}
+        {% if user.is_authenticated and user.is_superuser or user.is_authenticated and user.profile.role == 'admin' %}
+        <li>
+          <a href="{% url 'office_list' %}">
+            <div class="transition duration-200 flex p-2 text-beige hover:bg-beige hover:text-navyBlue
+            {% if '/offices' in request.path %} text-navyBlue bg-beige aria-current="page" {% endif %}">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 21h16.5M4.5 3h15M5.25 3v18m13.5-18v18M9 6.75h1.5m-1.5 3h1.5m-1.5 3h1.5m3-6H15m-1.5 3H15m-1.5 3H15M9 21v-3.375c0-.621.504-1.125 1.125-1.125h3.75c.621 0 1.125.504 1.125 1.125V21" />
+              </svg>
+              Offices
+            </div>
+          </a>
+        </li>
+        {% endif %}
+        {% if user.is_authenticated and user.is_superuser or user.is_authenticated and user.profile.role == 'admin' %}
+        <li>
+          <a href="{% url 'user_list' %}">
+            <div class="transition duration-200 flex p-2 text-beige hover:bg-beige hover:text-navyBlue
+            {% if '/auth' in request.path %} text-navyBlue bg-beige aria-current="page" {% endif %}">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+              </svg>
+              Users
+            </div>
+          </a>
+        </li>
+        {% endif %}
+
+
+
+        <li>
+          {% if user.is_authenticated %}
+          <button type="button" onclick="openLogoutModal()" class="transition duration-200 flex p-2 rounded-r-full text-beige hover:bg-beige hover:text-navyBlue">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6A2.25 2.25 0 0 0 5.25 5.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15M12 9l3 3m0 0-3 3m3-3H2.25"/>
+                <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6A2.25 2.25 0 0 0 5.25 5.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15M12 9l3 3m0 0-3 3m3-3H2.25"/>
             </svg>
             Logout
-          </div>
-        </a>
-      </li> 
-
-      <!-- Logout Modal -->
-      <div id="logoutModal" class="fixed inset-0 bg-navyLightestBlue bg-opacity-50 transition-opacity duration-300 ease-out hidden flex items-center justify-center z-50">
-        <div class="border-2 border-navyBlue bg-beige p-6 rounded-lg shadow-lg transform scale-95 transition-transform duration-300 ease-out">
-          
-          <div class="flex text-navyBlue font-bold text-xl">
-
-                <div class="w-1/4">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-fit">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                    </svg>
-                </div>
-                  <div class="w-fit my-auto flex flex-col">
-                    <span>{{ user.username }}</span>
-                
-                    {% if user.is_superuser %}
+          </button>
+    
+          <div id="logoutModal" class="fixed inset-0 flex items-center justify-center hidden bg-black bg-opacity-50 z-50 transition-opacity duration-300 ease-out opacity-0">
+            <div class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out" onclick="closeLogoutModal()"></div>
+            <div class="bg-beige p-6 rounded-lg shadow-lg transform transition-transform duration-300 ease-out scale-95">
+                <div class="flex text-navyBlue font-bold text-xl">
+                    <div class="w-1/4">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-fit">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                        </svg>
+                    </div>
+                    <div class="w-fit my-auto flex flex-col">
+                        <span>{{ user.username }}</span>
+                        {% if user.is_superuser %}
                         <span class="text-base text-navyLightBlue">Admin</span>
-                    {% else %}
+                        {% else %}
                         <span class="text-base text-navyLightBlue">{{ user.profile.office }}</span>
-                    {% endif %}
+                        {% endif %}
+                    </div>
                 </div>
-              
-            
+                <div class="text-xl font-bold m-4 text-navyBlue">Are you sure you want to log out?</div>
+                <div class="mt-4 flex justify-end gap-2">
+                    <button type="button" onclick="closeLogoutModal()" class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400 transition duration-200">Cancel</button>
+                    <a href="{% url 'logout' %}" class="px-4 py-2 bg-red-500 text-beige rounded-md hover:bg-red-700 transition duration-200">Logout</a>
+                </div>
             </div>
-
-
-          <div class="text-xl font-bold m-4 text-navyBlue"> Are you sure you want to log out?</div>
-          <div class="flex justify-end space-x-4">  
-            <button id="cancelButton" class="px-4 py-2 bg-navyLightBlue text-beige rounded-md hover:bg-gray-700 transition duration-200">Cancel</button>
-            <a href="{% url 'logout' %}" class="px-4 py-2 bg-red-500 text-beige rounded-md hover:bg-red-700 transition duration-200">Logout</a>
           </div>
-        </div>
-      </div>
 
-
-      {% else %}
-        <a href="{% url 'login' %}">
-          <div class="transition duration-200 flex p-2 rounded-r-full text-beige hover:bg-beige hover:text-navyBlue {% if request.path == '/login/' %}text-navyBlue bg-beige{% endif %}">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 9V5.25A2.25 2.25 0 0 1 10.5 3h6a2.25 2.25 0 0 1 2.25 2.25v13.5A2.25 2.25 0 0 1 16.5 21h-6a2.25 2.25 0 0 1-2.25-2.25V15M12 9l3 3m0 0-3 3m3-3H2.25" />
-            </svg>
-            Login
-          </div>
-        </a>
-      </li>
-      {% endif %}
+          {% else %}
+          <a href="{% url 'login' %}">
+            <div class="transition duration-200 flex p-2 rounded-r-full text-beige hover:bg-beige hover:text-navyBlue {% if request.path == '/auth/login/' %}text-navyBlue bg-beige{% endif %}">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 9V5.25A2.25 2.25 0 0 1 10.5 3h6a2.25 2.25 0 0 1 2.25 2.25v13.5A2.25 2.25 0 0 1 16.5 21h-6a2.25 2.25 0 0 1-2.25-2.25V15M12 9l3 3m0 0-3 3m3-3H2.25" />
+              </svg>
+              Login
+            </div>
+          </a>
+          {% endif %}
+        </li>
       </ul>
     </div>
   </div>
 </nav>
 
 <script>
-  // Toggle dropdown visibility on button click
   document.getElementById('dropdownButton').addEventListener('click', function() {
     var dropdownMenu = document.getElementById('dropdownMenu');
     dropdownMenu.classList.toggle('hidden');
   });
 
-  var logoutModal = document.getElementById('logoutModal');
-  var logoutButton = document.getElementById('logoutButton');
-  var cancelButton = document.getElementById('cancelButton');
-
-  // Function to show the modal with a transition effect
-  function showModal() {
-    logoutModal.classList.remove('hidden');
+  function openModal(modalId) {
+    var modal = document.getElementById(modalId);
+    modal.classList.remove('hidden');
     setTimeout(function() {
-      logoutModal.classList.remove('opacity-0', 'bg-opacity-0');
-      logoutModal.classList.add('opacity-100', 'bg-opacity-50');
-      document.querySelector('.transform').classList.remove('scale-95');
-      document.querySelector('.transform').classList.add('scale-100');
-    }, 10); // Small delay to trigger transition
+        modal.classList.remove('opacity-0');
+        modal.classList.add('opacity-100');
+        modal.querySelector('.transform').classList.remove('scale-95');
+        modal.querySelector('.transform').classList.add('scale-100');
+    }, 10);
   }
 
-  // Function to hide the modal with a transition effect
-  function hideModal() {
-    logoutModal.classList.add('opacity-0', 'bg-opacity-0');
-    logoutModal.classList.remove('opacity-100', 'bg-opacity-50');
-    document.querySelector('.transform').classList.add('scale-95');
-    document.querySelector('.transform').classList.remove('scale-100');
-    setTimeout(function() {
-      logoutModal.classList.add('hidden');
-    }, 300); // Match the duration of the transition
+  function closeModal(modalId) {
+      var modal = document.getElementById(modalId);
+      modal.classList.remove('opacity-100');
+      modal.classList.add('opacity-0');
+      modal.querySelector('.transform').classList.add('scale-95');
+      modal.querySelector('.transform').classList.remove('scale-100');
+      setTimeout(function() {
+          modal.classList.add('hidden');
+      }, 300);
   }
 
-  // Show the modal when logout is clicked
-  logoutButton.addEventListener('click', function(event) {
-    event.preventDefault();
-    showModal();
-  });
+  function openLogoutModal() {
+      openModal('logoutModal');
+  }
 
-  // Hide the modal when cancel is clicked
-  cancelButton.addEventListener('click', function() {
-    hideModal();
-  });
+  function closeLogoutModal() {
+      closeModal('logoutModal');
+  }
+
 </script>
